--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "btoa": "^1.1.2",
     "chalk": "^2.3.0",
     "dockerode": "^2.5.3",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "portfinder": "^1.0.13"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
