Add build script

--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.4",
   "author": "Francois Wouts <f@zenc.io>",
   "license": "MIT",
+  "main": "dist/main.js",
   "scripts": {
-    "dev": "nodemon -e ts -w src/ --exec 'ts-node src/main.ts || exit 1'"
+    "dev": "nodemon -e ts -w src/ --exec 'ts-node src/main.ts || exit 1'",
+    "build": "rimraf dist/ && tsc"
   },
   "dependencies": {
     "atob": "^2.0.3",
     "aws-sdk": "^2.169.0",
+    "axios": "^0.17.1",
     "btoa": "^1.1.2",
     "chalk": "^2.3.0",
     "dockerode": "^2.5.3",
@@ -21,6 +24,7 @@
     "@types/lodash": "^4.14.88",
     "@types/node": "^8.0.58",
     "nodemon": "^1.12.5",
+    "rimraf": "^2.6.2",
     "ts-node": "^4.0.1",
     "typescript": "^2.6.2"
   }
