--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ts-loader": "^3.2.0",
     "ts-node": "^4.0.1",
     "typescript": "^2.6.2",
+    "uglifyjs-webpack-plugin": "^1.1.2",
     "webpack": "^3.10.0"
   }
 }
