--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "chalk": "^2.3.0",
     "dockerode": "^2.5.3",
     "lodash": "^4.17.4",
-    "portfinder": "^1.0.13"
+    "portfinder": "^1.0.13",
+    "source-map-support": "^0.5.0"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
