--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.17.1",
     "btoa": "^1.1.2",
     "chalk": "^2.3.0",
+    "cloudformation-declarations": "0.0.9",
     "dockerode": "^2.5.3",
     "lodash": "^4.17.4",
     "portfinder": "^1.0.13",
