Don't omit dist/ in published NPM package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@zenc/deploy",
-  "version": "0.0.4",
+  "name": "@zenclabs/deploy",
+  "version": "0.0.5",
   "author": "Francois Wouts <f@zenc.io>",
   "license": "MIT",
   "bin": {
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "nodemon -e ts -w src/ --exec ts-node src/main.ts",
-    "build": "rimraf dist/ && webpack && echo \"#!/usr/bin/env node\\n\" | cat - dist/main.js > dist/main-with-prefix.js && mv dist/main-with-prefix.js dist/main.js && chmod +x dist/main.js"
+    "build":
+      "rimraf dist/ && webpack && echo \"#!/usr/bin/env node\\n\" | cat - dist/main.js > dist/main-with-prefix.js && mv dist/main-with-prefix.js dist/main.js && chmod +x dist/main.js"
   },
   "dependencies": {
     "atob": "^2.0.3",
