--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "dev": "nodemon -e ts -w src/ --exec ts-node src/main.ts",
-    "build":
-      "rimraf dist/ && webpack && echo \"#!/usr/bin/env node\\n\" | cat - dist/main.js > dist/main-with-prefix.js && mv dist/main-with-prefix.js dist/main.js && chmod +x dist/main.js"
+    "build": "rimraf dist/ && webpack && echo \"#!/usr/bin/env node\\n\" | cat - dist/main.js > dist/main-with-prefix.js && mv dist/main-with-prefix.js dist/main.js && chmod +x dist/main.js"
   },
   "dependencies": {
     "atob": "^2.0.3",
@@ -27,14 +26,14 @@
   "devDependencies": {
     "@types/chalk": "^2.2.0",
     "@types/dockerode": "^2.5.1",
-    "@types/lodash": "^4.14.88",
-    "@types/node": "^8.0.58",
-    "nodemon": "^1.12.5",
+    "@types/lodash": "^4.14.89",
+    "@types/node": "^8.5.1",
+    "nodemon": "^1.12.7",
     "rimraf": "^2.6.2",
     "ts-loader": "^3.2.0",
     "ts-node": "^4.0.1",
     "typescript": "^2.6.2",
-    "uglifyjs-webpack-plugin": "^1.1.2",
+    "uglifyjs-webpack-plugin": "^1.1.3",
     "webpack": "^3.10.0"
   }
 }
