--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "deploy": "./dist/main.js"
   },
   "scripts": {
-    "dev": "nodemon -e ts -w src/ --exec ts-node src/main.ts",
+    "dev": "ts-node src/main.ts",
     "build": "rimraf dist/ && webpack && echo \"#!/usr/bin/env node\\n\" | cat - dist/main.js > dist/main-with-prefix.js && mv dist/main-with-prefix.js dist/main.js && chmod +x dist/main.js"
   },
   "dependencies": {
@@ -26,6 +26,7 @@
     "cloudformation-declarations": "0.0.9",
     "commander": "^2.12.2",
     "dockerode": "^2.5.3",
+    "inquirer": "^4.0.1",
     "lodash": "^4.17.4",
     "portfinder": "^1.0.13",
     "source-map-support": "^0.5.0"
@@ -33,8 +34,10 @@
   "devDependencies": {
     "@types/chalk": "^2.2.0",
     "@types/dockerode": "^2.5.1",
+    "@types/inquirer": "0.0.36",
     "@types/lodash": "^4.14.91",
     "@types/node": "^8.5.1",
+    "imports-loader": "^0.7.1",
     "nodemon": "^1.12.7",
     "rimraf": "^2.6.2",
     "ts-loader": "^3.2.0",
