--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "rimraf dist/ && webpack && echo \"#!/usr/bin/env node\\n\" | cat - dist/main.js > dist/main-with-prefix.js && mv dist/main-with-prefix.js dist/main.js && chmod +x dist/main.js"
   },
   "dependencies": {
+    "analytics-node": "^3.2.0",
     "atob": "^2.0.3",
     "aws-sdk": "^2.170.0",
     "axios": "^0.17.1",
@@ -27,15 +28,20 @@
     "dockerode": "^2.5.3",
     "inquirer": "^4.0.1",
     "lodash": "^4.17.4",
+    "mkdirp": "^0.5.1",
     "portfinder": "^1.0.13",
-    "source-map-support": "^0.5.0"
+    "source-map-support": "^0.5.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "@types/analytics-node": "0.0.30",
     "@types/chalk": "^2.2.0",
     "@types/dockerode": "^2.5.1",
     "@types/inquirer": "0.0.36",
     "@types/lodash": "^4.14.91",
+    "@types/mkdirp": "^0.5.2",
     "@types/node": "^8.5.1",
+    "@types/uuid": "^3.4.3",
     "imports-loader": "^0.7.1",
     "nodemon": "^1.12.7",
     "rimraf": "^2.6.2",
