--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "inquirer": "^4.0.1",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
+    "package-info": "^3.0.1",
     "portfinder": "^1.0.13",
     "source-map-support": "^0.5.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
     "@types/analytics-node": "0.0.30",
+    "@types/axios": "^0.14.0",
     "@types/chalk": "^2.2.0",
     "@types/dockerode": "^2.5.1",
     "@types/inquirer": "0.0.36",
