--- a/package.json
+++ b/package.json
@@ -24,37 +24,37 @@
   "dependencies": {
     "analytics-node": "^3.2.0",
     "atob": "^2.0.3",
-    "aws-sdk": "^2.170.0",
+    "aws-sdk": "^2.188.0",
     "axios": "^0.17.1",
     "btoa": "^1.1.2",
     "chalk": "^2.3.0",
-    "commander": "^2.12.2",
+    "commander": "^2.13.0",
     "dockerode": "^2.5.3",
-    "inquirer": "^4.0.1",
+    "inquirer": "^5.0.1",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "package-info": "^3.0.1",
     "portfinder": "^1.0.13",
-    "source-map-support": "^0.5.0",
-    "uuid": "^3.1.0"
+    "source-map-support": "^0.5.3",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "@types/analytics-node": "0.0.30",
     "@types/axios": "^0.14.0",
     "@types/chalk": "^2.2.0",
-    "@types/dockerode": "^2.5.1",
+    "@types/dockerode": "^2.5.3",
     "@types/inquirer": "0.0.36",
-    "@types/lodash": "^4.14.91",
+    "@types/lodash": "^4.14.98",
     "@types/mkdirp": "^0.5.2",
-    "@types/node": "^8.5.1",
+    "@types/node": "^9.4.0",
     "@types/uuid": "^3.4.3",
     "imports-loader": "^0.7.1",
-    "nodemon": "^1.12.7",
+    "nodemon": "^1.14.11",
     "rimraf": "^2.6.2",
-    "ts-loader": "^3.2.0",
-    "ts-node": "^4.0.1",
-    "typescript": "^2.6.2",
-    "uglifyjs-webpack-plugin": "^1.1.4",
+    "ts-loader": "^3.3.1",
+    "ts-node": "^4.1.0",
+    "typescript": "^2.7.0-rc",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0"
   }
 }
